# EMSE2025SAR-prophet2

prophet/: Cargo.toml
prophet-bounded-context/: Cargo.toml
prophet-model/: Cargo.toml
prophet-ressa/: Cargo.toml
prophet-ressa-minify/: Cargo.toml
