[package]
name = "prophet-ressa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
source-code-parser = { git = "https://github.com/M3SOulu/EMSE2025SAR-source-code-parser", rev = "c2000c8" }
prophet-ressa-minify = { path = "../prophet-ressa-minify" }
tracing = "0.1.26"
thiserror = "1.0.29"
